--- a/src/style.css
+++ b/src/style.css
@@ -4,23 +4,18 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #bf911b;
-}
-
 #content {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  background-color: #bf911b;
+  height: 100svh;
 }
 
-.header {
+header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  margin-top: 30px;
+  padding-top: 30px;
 }
 
 .logo {
@@ -57,13 +52,14 @@ body {
   margin-top: 1rem;
 }
 
-.pages {
+nav {
   display: flex;
   gap: 1rem;
 }
 
-.pages * {
-  border: solid black;
+li {
+  list-style-type: none;
+  border-bottom: solid black;
   width: 99px;
   height: 33px;
   display: flex;
@@ -72,6 +68,7 @@ body {
 }
 
 footer {
+  background-color: #bf911b;
   height: 50px;
   display: flex;
   justify-content: center;
