--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ header {
   border-radius: 50%;
 }
 
-.main {
+.main-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,16 +39,17 @@ header {
   margin-top: 10px;
   padding: 2rem 300px;
   background-color: #cb9a1d;
+  min-height: 100svh;
 }
 
-.main img {
+.main-content img {
   height: 500px;
   width: 500px;
   background-color: #cb9a1d;
   border-radius: 50%;
 }
 
-.main p {
+.main-content p {
   margin-top: 1rem;
 }
 
