--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-top: 10px;
-  padding: 2rem 300px;
+  padding: 2rem 4rem;
   background-color: #cb9a1d;
   min-height: 100svh;
 }
@@ -88,6 +88,7 @@ footer {
   align-items: center;
 }
 
+/* menu tab */
 .menu-container {
   display: flex;
   justify-content: center;
