--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 #content {
   background-color: #bf911b;
-  height: 100svh;
+  height: 100dvh;
 }
 
 /* header  */
@@ -113,6 +113,39 @@ footer {
 .option-container:hover img:nth-child(1) {
   opacity: 1;
   transition: opacity 200ms;
+}
+/* menu tab table */
+.table-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.table-container table {
+  border: 1px solid #dededf;
+  height: 100%;
+  width: 50%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border-spacing: 1px;
+  text-align: left;
+}
+.table-container caption {
+  caption-side: top;
+  text-align: left;
+}
+.table-container th {
+  border: 1px solid #dededf;
+  background-color: #eceff1;
+  color: #000000;
+  padding: 5px;
+}
+.table-container td {
+  border: 1px solid #dededf;
+  background-color: #ffffff;
+  color: #000000;
+  padding: 5px;
 }
 
 /* orders tab */
