--- a/src/style.css
+++ b/src/style.css
@@ -81,11 +81,12 @@ footer {
 .about-container {
   height: 100dvh;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 4rem;
   padding: 2rem;
+  text-align: center;
 }
 .about-container p {
   width: 100%;
@@ -96,17 +97,8 @@ footer {
   background-color: #cd981d;
   border-radius: 50%;
 }
-.main-content p {
-  margin-top: 1rem;
-}
-@media (max-width: 850px) {
-  #logo-image {
-    height: 250px;
-  }
-  .about-container {
-    flex-direction: column;
-    text-align: justify;
-  }
+.about-container * {
+  margin-bottom: 0.5rem;
 }
 
 /* menu tab */
@@ -123,6 +115,9 @@ footer {
   border: solid #6e470014;
   /* width: 400px; */
   width: 40dvh;
+}
+.option-container:hover {
+  cursor: pointer;
 }
 .option-container {
   position: relative;
@@ -170,3 +165,44 @@ footer {
 }
 
 /* orders tab */
+.orders-container img {
+  height: 500px;
+  border-radius: 50%;
+}
+.orders-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem;
+  border-radius: 25px;
+  height: 100dvh;
+}
+.orders-container div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.orders-container button {
+  cursor: pointer;
+  font-size: 1.3rem;
+  width: 250px;
+  border-radius: 10px;
+  padding: 1rem;
+  border: none;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+@media (max-width: 850px) {
+  #logo-image {
+    height: 250px;
+  }
+  .orders-container {
+    flex-direction: column;
+  }
+  .orders-container img {
+    height: 250px;
+  }
+}
