--- a/src/style.css
+++ b/src/style.css
@@ -46,22 +46,37 @@ header {
 }
 nav {
   display: flex;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 li {
+  position: relative;
   list-style-type: none;
   width: 99px;
   height: 33px;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: translate 100ms;
+}
+li::after {
+  content: "";
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+
+  background-color: #000000;
+  scale: 0 1;
+  transition: scale 500ms;
 }
 li:hover {
-  border-bottom: solid black;
-  transition: 100ms;
+  translate: 0 -3px;
+  transition: translate 250ms;
 }
-.list-active {
-  border-bottom: solid black;
+.list-active::after {
+  content: "";
+  scale: 1 1;
+  transition: scale 250ms;
 }
 li:hover {
   cursor: pointer;
